apps/pocketid/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: pocketid
  labels:
    inject-ca-bundle: "true"
