apps/pocketid/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: pocketid
  namespace: pocketid
spec:
  selector:
    app.kubernetes.io/name: pocketid
  ports:
    - name: http
      port: 1411
      targetPort: http
