apps/pocketid/route.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: pocketid
  namespace: pocketid
spec:
  parentRefs:
    - name: default
      namespace: gateway
      sectionName: pocketid
  hostnames:
    - sso.tomerhanochi.com
  rules:
    - backendRefs:
        - name: pocketid
          port: 1411
